--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
         </div>
 
         <ul>
-            <li class="active">Home</li>
-            <li>About</li>
-            <li>Portfolio</li>
-            <li>New Skills</li>
-            <li>Contact</li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about" >About </a></li>
+            <li><a href="#portfolio" >Portfolio </a></li>
+            <li><a href="#skills" >New Skills </a></li>
+            <li><a href="#contact" >Contact </a></li>
         </ul>
-
 
     </nav>
 
-    <div class="section-1">
+    <div class="section-1" id = 'home'>
         <div class="name">
             <h1>Abrar khan</h1>
             <h2>Reactjs Developer</h2>
@@ -41,7 +40,7 @@
         </div>
     </div>
 
-    <div class="section-2">
+    <div class="section-2" id = 'about'>
         <div class="profile">
             <img src="./pic1.jpg" width="400px" height="400px" alt="abrar khan">
         </div>
@@ -64,7 +63,7 @@
 
     </div>
 
-    <div class="section-3">
+    <div class="section-3" id = 'portfolio'>
 
         <h2 class = 'h2'>MY <span>PROJECTS</span></h2>
 
@@ -102,7 +101,7 @@
         </div>
     </div>
 
-    <div class="section-4">
+    <div class="section-4" id = 'skills'>
         <div class="first">
             <h3>I'm available for freelance work <span>_</span></h3>
             <h4>Contact</h4>
@@ -133,7 +132,7 @@
 
     </div>
 
-    <div class="section-5">
+    <div class="section-5" id = 'contact'>
         <h2> Get In  <span> Touch </span> </h2>
 
         <div class="form">
@@ -196,7 +195,7 @@
             
             <p class="title">Nextjs javaScript Library for Full stack</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere veniam inventore mollitia ratione sunt unde debitis pariatur distinctio odit placeat possimus, qui magnam non velit vel corrupti, omnis consectetur natus!</p>
+            <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere veniam inventore mollitia ratione sunt unde debitis pariatur distinctio odit placeat possimus, qui magnam non velit vel corrupti, omnis consectetur natus!</p>
             </div>
         </div>
 
@@ -213,12 +212,12 @@
 
     </div>
 
-
     <footer>
 
         <div class="water_wave">
 
         </div>
+
         <div id="child">
 
             <div class="logo">
@@ -226,10 +225,10 @@
                 <!-- <i class="fa-solid fa-bars" onclick="hideMenuOfNav()"></i> -->
             </div>
             <div class="social-logo">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-twitter"></i>
+                <a href="#" style="color: white;"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" style="color: white;"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" style="color: white;"><i class="fa-brands fa-github"></i></a>
+                <a href="#" style="color: white;"><i class="fa-brands fa-twitter"></i></a>
             </div>
 
             <div>
