add animation and download functionality also

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h6><i class="fa-solid fa-angles-right"></i>Communication skills</h6>
             </div>
 
-            <a href="" download="./pic1.jpg">
+            <a href="./pic/ABRAR_KHAN.pdf" download="ABRAR_KHAN.pdf">
                 <button> Download CV </button>
             </a>
         </div>
@@ -133,6 +133,7 @@
     </div>
 
     <div class="section-5" id = 'contact'>
+
         <h2> Get In  <span> Touch </span> </h2>
 
         <div class="form">
@@ -214,10 +215,6 @@
 
     <footer>
 
-        <div class="water_wave">
-
-        </div>
-
         <div id="child">
 
             <div class="logo">
@@ -235,6 +232,10 @@
                 <p>Abrar khan Copy Right</p>
             </div>
 
+        </div>
+
+        <div class="water_wave">
+            <div class="wave wave1"></div>
         </div>
 
     </footer>
