--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="section-2" id = 'about'>
         <div class="profile">
-            <img src="./pic1.jpg" width="400px" height="400px" alt="abrar khan">
+            <img src="./pic/Abrar.jpeg" width="400px" height="400px" alt="abrar khan">
         </div>
 
         <div class="details">
@@ -215,6 +215,12 @@
 
     <footer>
 
+        <div class="water_wave">
+            <div class="wave wave1"></div>
+            <!-- <div class="wave wave2"></div> -->
+            <div class="wave wave3"></div>
+        </div>
+
         <div id="child">
 
             <div class="logo">
@@ -232,10 +238,6 @@
                 <p>Abrar khan Copy Right</p>
             </div>
 
-        </div>
-
-        <div class="water_wave">
-            <div class="wave wave1"></div>
         </div>
 
     </footer>
