modify the code litterr bit and add pictures

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </div>
 
     <div class="section-4" id = 'skills'>
+        
         <div class="first">
             <h3>I'm available for freelance work <span>_</span></h3>
             <h4>Contact</h4>
@@ -109,7 +110,7 @@
 
         <div class="second">
 
-            <h2 class = '.h2' id = 'h2'>Learning <span>skills</span> </h2>
+            <h2 class = '.h2' id = 'h2'> My <span>skills</span> </h2>
 
               <div id="proj"> 
 
@@ -126,7 +127,7 @@
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis vel sunt nostrum accusantium laboriosam veniam! Reprehenderit,</h3>
                 </div> -->
 
-                </div>  
+              </div>  
 
         </div>
 
@@ -185,7 +186,7 @@
 
         <div class="content">
 
-            <i class="fa-solid fa-x" onclick="productShowOrNot(event)"></i>
+            <i class="fa-solid fa-x" onclick="productShowOrNot(event)" ></i>
 
             
             <img src="./pic1.jpg" alt="content" class="iconPic">
