Solve the close functionality problem

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <div class="content">
 
-            <i class="fa-solid fa-x" onclick="productShowOrNot(event)" ></i>
+            <i class="fa-solid fa-x" onclick="closeDetail(event)" style="color: brown;"></i>
 
             
             <img src="./pic1.jpg" alt="content" class="iconPic">
