invisible animation of footer after middium size and visible before middium size

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <a href="#" style="color: white;"><i class="fa-brands fa-twitter"></i></a>
             </div>
 
-            <div>
+            <div style="padding-right: 10px;">
                 <p>Abrar khan Copy Right</p>
             </div>
 
